--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<p>This is how you mark up and HTML paragraph.</p>
-<p>This is another example</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Basic HTML | Betamore Academy</title>
+  </head>
+  <body>
+    <h1>Welcome to Basic HTML</h1>
+    <p>Make something cool with the web!</p>
+  </body>
+</html>
