--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
   </head>
   <body>
     <h1>Welcome to Basic HTML</h1>
-    <p>Make something cool with the web!</p>
+  <section>
+      <p><strong>Make</strong> <em>something</em>cool with the web!</p>
+    <ul>
+      <li>first item</li>
+      <li>second item</li>
+      <li>third item</li>
+    </ul>
+    <ol>
+      <li>first item</li>
+      <li>second item</li>
+      <li>third item</li>
+    </ol>
+</section>
   </body>
 </html>
