--- a/wiki-sample.html
+++ b/wiki-sample.html
@@ -1,11 +1,12 @@
 <html>
   <head>
     <title>Alberto Ibarguen - Wikipedia, the free encyclopdia</title>
+    <link rel="stylesheet" href="css/main.css">
     <meta charset="utf-8">
   </head>
 
 <body>
-  <h1>Welcome to Alberto Ibarguen's bio</h1>
+  <h1>Welcome to Alberto Ibargüen's bio</h1>
 <section>
   <p>Alberto Ibargüen (born February 29, 1944)[1] is President and CEO of the John S. and James L. Knight Foundation in Miami, Florida. He is the former publisher of The Miami Herald and El Nuevo Herald in Miami, Florida. Under his leadership, The Miami Herald won three Pulitzer Prizes; El Nuevo Herald won Spain's Ortega y Gasset Prize for excellence in journalism.[2]</p>
   <ol><strong>Contents</strong>
