adjacent_sibling_added

--- a/homework/css-practice.html
+++ b/homework/css-practice.html
@@ -14,6 +14,8 @@
     <li><span class="dates">December 1996:</span> CSS was proposed as W3C standard:</li>
   </ul>
 </section>
+<p>words some words</p>
+<p>pop that soap</p>
 <section>
   <blockquote>"CSS1 defines the language in which style sheets are written and a set of properties that designers can use to describe how documents should be presented. The properties in CSS1 cover the most common screen-based presentations."
     <footer>
